--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow-y: scroll;
+  background-color: rgb(22, 20, 20);
+  /* background-color: rgba(24, 18, 18, 0.933); */
+}
+
 #root {
-  background-image: url(../src/assets/cocinero-bg.jpg);
   height: 100vh;
+  background-image: url(../src/assets/cocinero-bg.jpg);
   background-position: center;
   background-size: cover;
   color: #fff;
