--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 #root {
   height: 100vh;
-  background-image: url(../src/assets/cocinero-bg.jpg);
+  background-image: url(../src/assets/cocinero-bg.jp);
   background-position: center;
   background-size: cover;
   color: #fff;
