--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 #root {
   height: 100vh;
   background-color: #111;
-  background-image: url(../src/assets/cocinero-bg.jpg);
+  background-image: url(../src/assets/cocinero-bg.jp);
   background-position: center;
   background-size: cover;
   color: #fff;
