--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 #root {
   height: 100vh;
-  background-color: #111;
-  background-image: url(../src/assets/cocinero-bg.jp);
+  /* background-color: #111; */
+  background-image: url(../src/assets/cocinero-bg.jpg);
   background-position: center;
   background-size: cover;
   color: #fff;
